--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ on:
 
 env:
   BOOK_NAME: introtopython
+
 jobs:
   build-html-and-deploy:
     runs-on: ubuntu-latest
@@ -32,7 +33,7 @@ jobs:
 
       - name: Build IBook
         shell: bash -l {0}
-        run: jb build ${{ BOOK_NAME }}/
+        run: jb build ${{secrets.BOOK_NAME}}/
 
       - name: Add adsense
         shell: bash -l {0}
@@ -43,4 +44,4 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
-          FOLDER: ${{ BOOK_NAME }}/_build/html
+          FOLDER: ${{ secrets.BOOK_NAME }}/_build/html
