--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         run: pip install git+https://github.com/ExecutableBookProject/jupyter-book.git@master
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r introtopython/requirements.txt
 
 
       - name: Build IBook
